# cad-3dto2d

./: README.md  pyproject.toml
scripts/: gen2d.py
src/cad_3dto2d/: converter.py  layout.py  styles.py  templates.py  types.py  views.py
src/cad_3dto2d/annotations/: dimensions.py  features.py  planner.py
src/cad_3dto2d/exporters/: dxf.py  svg.py
src/cad_3dto2d/rendering/: dxf_backend.py  svg_tools.py
src/cad_3dto2d/styles/: index.yaml  iso.yaml  iso_archtick.yaml  iso_arrow_closedblank.yaml  iso_arrow_datumblank.yaml  iso_arrow_datumfilled.yaml  iso_arrow_ez_arrow.yaml  iso_arrow_ez_arrow_blank.yaml  iso_arrow_ez_arrow_filled.yaml  iso_arrow_open30.yaml  iso_arrow_open90.yaml  iso_compact.yaml  iso_precision.yaml  iso_roomy.yaml
src/cad_3dto2d/templates/: A4_LandscapeParam.yaml  A4_LandscapeParamCompactBR.yaml  A4_LandscapeParamRightStrip.yaml  A4_LandscapeParamTwoTier.yaml  A4_LandscapeParamWideBottom.yaml  A4_LandscapeTD.yaml  index.yaml
